# composed-robot

./: .gitignore  README.md  pyproject.toml  reset.py
camera_calibration/: main.py  process.py
camera_calibration_2/: main.py  process.py
composed-robot/: collection.py  drive_robot.py  hub.py  odometry.py  workers.py
composed-robot/arbitration/: arbiter.py  behaviour.py  test.py
composed-robot/avoid/: avoid.py  run.py  state.py
composed-robot/behaviors/: avoid.py  drive_free.py  home_tyre.py  start.py
composed-robot/collection/: avoid.py  odometry.py  robot.py  robot_node.py  run.py  state.py  workers.py
composed-robot/collection/behaviors/: avoid.py  drive_free.py  home_tyre-test.py  home_tyre.py  start.py
composed-robot/distance/: local_publisher.py  node.py  ranger.py  rangers.py  rangers_generator.py  run.py
composed-robot/experiments/: experiment1.py
composed-robot/experiments/home_tyre/: home_tyre.py
composed-robot/vision/: main.py
